force-app/main/default/objects/Video__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phase</label>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>Videos</relationshipLabel>
    <relationshipName>Videos</relationshipName>
    <type>Lookup</type>
</CustomField>