force-app/main/default/objects/Video__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Videos</relationshipLabel>
    <relationshipName>Videos</relationshipName>
    <type>Lookup</type>
</CustomField>